apps/firefly/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: firefly-stripprefix
  # namespace: firefly # Handled by kustomization
spec:
  stripPrefix:
    prefixes:
      - /firefly
