apps/firefly/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firefly
  labels:
    name: firefly
    app.kubernetes.io/name: firefly
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
