apps/firefly/base/postgress_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: firefly
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    name: postgres
  type: ClusterIP
